# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_cargo_crate("rlib") {
  crate_name = "tokio"
  crate_type = "rlib"
  crate_root = "src/lib.rs"

  sources = [ "src/lib.rs" ]
  edition = "2018"
  cargo_pkg_version = "1.20.1"
  cargo_pkg_authors = "Tokio Contributors <team@tokio.rs>"
  cargo_pkg_name = "tokio"
  deps = [
    "//third_party/rust/crates/bytes:lib",
    "//third_party/rust/crates/libc:lib",
    "//third_party/rust/crates/memchr:lib",
    "//third_party/rust/crates/mio:lib",
    "//third_party/rust/crates/num_cpus:lib",
    "//third_party/rust/crates/once_cell:lib",
    "//third_party/rust/crates/pin-project-lite:lib",
    "//third_party/rust/crates/socket2:lib",
  ]
  features = [
    "default",
    "io-util",
    "rt-multi-thread",
    "fs",
    "sync",
    "net",
    "rt",
    "time",
  ]
}

ohos_rust_shared_library("lib") {
  crate_name = "tokio"
  crate_type = "dylib"
  crate_root = "src/lib.rs"

  sources = [ "src/lib.rs" ]
  edition = "2018"
  deps = [
    "//third_party/rust/crates/bytes:lib",
    "//third_party/rust/crates/libc:lib",
    "//third_party/rust/crates/memchr:lib",
    "//third_party/rust/crates/mio:lib",
    "//third_party/rust/crates/num_cpus:lib",
    "//third_party/rust/crates/once_cell:lib",
    "//third_party/rust/crates/pin-project-lite:lib",
    "//third_party/rust/crates/socket2:lib",
  ]
  features = [
    "default",
    "io-util",
    "rt-multi-thread",
    "fs",
    "sync",
    "net",
    "rt",
    "time",
  ]
}
