# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_rust_shared_library("lib") {
  crate_name = "ylong_runtime"
  crate_type = "dylib"
  crate_root = "src/lib.rs"

  part_name = "rust_tokio"
  subsystem_name = "thirdparty"

  sources = [ "src/lib.rs" ]
  deps = [ "//third_party/rust/crates/tokio/tokio:lib" ]
  features = [
    "full",
    "multi_thread_runtime",
    "current_thread_runtime",
    "fs",
    "sync",
    "timer",
    "net",
  ]
}
